# c-repo

./: CMakeLists.txt  Func.c  Func.h  Student.h  arr.c  calc.c  calc.h  dynamic_memory_allocation.c  dynamic_memory_allocation.h  fileIO.c  fileIO.h  main.c  pointer.c  pointer.h  string.c  string.h
source/: aa.js  main.c  package.json  tsconfig.json
source/algorithm/: PriorityQueue.ts  SequentialSearch.ts  algorithm.c  algorithm.h  algorithm.md  arrAlgorithmUtil.c  arrAlgorithmUtil.h  bfs.c  bfs.h  bfs.ts  binarySearchTree.c  binarySearchTree.h  binaryTree.js  dfs.c  dfs.h  graph.c  graph.h  insertionSort.c  insertionSort.h  qickSort.c  qickSort.h  radixSort.js  selectionSort.c  selectionSort.h
source/basic/: Func.h  Student.c  arr.c  arr.h  calc.h  preprocessor.c  preprocessor.h  string.c  string.h  variable.c  variable.h
source/dataStructure/: arrayList.c  arrayList.h  doublyLinkedList.c  doublyLinkedList.h  linkedList.c  linkedList.h  linkedListStack.c  linkedListStack.h  listStack.c  listStack.h  singleLinkedList.c  singleLinkedList.h  stack.c  stack.h  stackCalculator.c  stackCalculator.h
source/fileIO/: fileIO.c  fileIO.h
source/pointer/: multiArray_pointerArray.c  multiArray_pointerArray.h  pointer.c
source/prac/: bubbleSort.c  bubbleSort.h  control.c  control.h  insa.c  insa.h  jsu.c  jsu.h  perfectNum.c  perfectNum.h  t_factorial.c  t_factorial.h
