cmake_minimum_required(VERSION 3.27)
project(c_algorithm C)

set(CMAKE_C_STANDARD 11)

add_executable(c_algorithm main.c
        calc.h
        calc.h
        calc.h
        calc.c
        arr.h
        arr.c
        pointer.h
        pointer.c
        string.h
        string.c
        variable.h
        variable.c
        multiArray_pointerArray.h
        multiArray_pointerArray.c
        dynamic_memory_allocation.h
        dynamic_memory_allocation.c
        Func.c
        Func.h
        Student.h
        Student.c
        fileIO.c
        fileIO.h
)
