cmake_minimum_required(VERSION 3.27)
project(c_algorithm C)

set(CMAKE_C_STANDARD 11)

add_executable(c_algorithm source/main.c
        source/basic/calc.h
        source/basic/calc.h
        source/basic/calc.h
        source/basic/calc.c
        source/basic/arr.h
        source/basic/arr.c
        source/pointer/pointer.h
        source/pointer/pointer.c
        source/basic/string.h
        source/basic/string.c
        source/basic/variable.h
        source/basic/variable.c
        source/pointer/multiArray_pointerArray.h
        source/pointer/multiArray_pointerArray.c
        source/pointer/dynamic_memory_allocation.h
        source/pointer/dynamic_memory_allocation.c
        source/basic/Func.c
        source/basic/Func.h
        source/basic/Student.h
        source/basic/Student.c
        source/fileIO/fileIO.c
        source/fileIO/fileIO.h
        source/basic/preprocessor.c
        source/basic/preprocessor.h
        source/algorithm/algorithm.c
        source/algorithm/algorithm.h
        source/dataStructure/singleLinkedList.c
        source/dataStructure/singleLinkedList.h
        source/dataStructure/arrayList.c
        source/dataStructure/arrayList.h
        source/dataStructure/doublyLinkedList.c
        source/dataStructure/doublyLinkedList.h
        source/prac/control.c
        source/prac/control.h
        source/prac/jsu.c
        source/prac/jsu.h
        source/prac/insa.c
        source/prac/insa.h
        source/prac/t_factorial.c
        source/prac/t_factorial.h
        source/prac/bubbleSort.c
        source/prac/bubbleSort.h
        source/prac/perfectNum.c
        source/prac/perfectNum.h
        source/dataStructure/listStack.c
        source/dataStructure/listStack.h
        source/dataStructure/linkedListStack.c
        source/dataStructure/linkedListStack.h
)
